--- a/index.html
+++ b/index.html
@@ -131,9 +131,6 @@
         <a id="top"></a>
         <section id="home" class="hero-section">
             <h1>Empowering individuals with job opportunities.</h1>
-            <!-- Contact Us button with mailto link -->
-            <a href="contact.html" class="contact-button">
-                Contact Us
                 <span class="sr-only">Contact Us</span> <!-- Screen reader only text for accessibility -->
             </a>
             
@@ -154,8 +151,10 @@
     </main>
 
     <footer>
-        <!-- Footer content -->
-        <p>&copy; 2024 GENESIS</p>
+        <a href="contact.html" class="contact-button">
+            Contact Us
+            <span class="sr-only">Contact Us</span> <!-- Screen reader only text for accessibility -->
+        </a>
     </footer>
 
     <script src="scripts.js"></script>
