--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 GENESIS. All rights reserved.</p>
+    <p>&copy; 2024 Genesis All rights reserved.</p>
 </footer>
 
 </head>
